2012-08-06  Earnie Boyd  <earnie@users.sourceforge.net>

	* .gitignore: New file.

2010-06-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add install-sh script.

	* install-sh: New file; copy it from autoconf-2.63 sources.

2010-05-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add canonical sources for GNU config scripts.

	* config.guess, config.sub: New files; copy them from the git
	repository on savannah.gnu.org

2010-04-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Initialise MinGW/build-aux CVS module.

	* build-aux: New CVS module.
	
	* README ChangeLog: New files.
	* m4: New directory; add it.
	* m4/missing.m4: New file.

	* CVSROOT/modules (modules): New self-referencing module; define it.
	(missing.m4): New module reference to build-aux/m4/missing.m4; it will
	incorporate m4/missing.m4 into any module embedding it.