@@ -1,3 +1,13 @@
+2013-04-10  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Add extra autoconf macro support for 'make' feature checks.
+
+	* m4/makeopts.m4: New file; it provides this...
+	(MINGW_AC_MAKE_OPTION_SUPPORTED): ...generic check for acceptance of
+	any nominated 'make' command line option, extended by this...
+	(MINGW_AC_MAKE_NO_PRINT_DIRECTORY): ...specific check for support for
+	GNU make's '--no-print-directory' option.
+
 2012-08-06  Earnie Boyd  <earnie@users.sourceforge.net>
 
 	* .gitignore: New file.
